Variety of UI fixes - Fixes for sharing with open graph - Responsive tweaks to make things look better on mobile

--- a/app/assets/stylesheets/_blogadmin.scss
+++ b/app/assets/stylesheets/_blogadmin.scss
@@ -148,15 +148,14 @@ section.blogpost {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
-
   @include for-tablet-portrait-up {
-    padding: 2rem 8rem 0;
+    width: 80%;
+    margin: auto;
   }
 
   article {
     flex: 0 1 auto;
     width: 100%;
-    padding: 2rem;
 
     @include for-tablet-portrait-up {
       width: 70%;
@@ -166,6 +165,7 @@ section.blogpost {
     ul li {
       @extend p;
     }
+
   }
 
   aside {
@@ -174,6 +174,7 @@ section.blogpost {
     @include for-tablet-portrait-up {
       display: block;
       width: 30%;
+      padding: 0 0 0 2rem;
     }
   }
 }
@@ -183,7 +184,11 @@ section.blogpost {
   position: relative;
   overflow: hidden;
   background: $color_hblue;
-  margin: -2rem -2rem 2rem -2rem;
+  margin: -1rem -1rem 2rem -1rem;
+
+  @include for-tablet-portrait-up {
+    margin: 0 -2rem 2rem -2rem;
+  }
 }
 
 .post-meta {
@@ -195,12 +200,14 @@ section.blogpost {
 
   h1 {
     line-height: 1;
-    margin-bottom: .6rem;
+    margin: 0 0 1rem;
   }
 
   h6 {
     font-size: 1rem;
-    line-height: 34px;
+    line-height: 48px;
+    color: transparentize($color_hblue, .3);
+    margin: 1rem 0 3rem;
   }
 }
 
@@ -212,9 +219,9 @@ section.blogpost {
 }
 
 .tiny-avatar {
-  width: 32px;
-  height: 32px;
-  float: right;
+  width: 48px;
+  height: 48px;
+  float: left;
   margin-right: 1rem;
 
   img {
