--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,5 +15,4 @@ body {
   box-sizing: border-box;
 }
 .content {
-  padding: 2rem;
 }
