--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,7 +8,7 @@ footer {
     padding: 2rem 0;
 
     @include for-tablet-portrait-up {
-      width: 70%;
+      width: 80%;
       margin: auto;
     }
   }
