--- a/app/assets/stylesheets/core/_type.scss
+++ b/app/assets/stylesheets/core/_type.scss
@@ -48,9 +48,10 @@ h6 {
 }
 
 p {
-	font-size: 1rem;
-	line-height: 1.35;
+	font-size: 1.15rem;
+	line-height: 1.45;
 	margin-bottom: 1rem;
+	color: #444;
 	quotes: "\201C" "\201D" "\2018" "\2019";
 }
 p em {
